[package]
name = "maintenance-widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "canvas", "tokio", "sipper"] }
reqwest = { version = "0.12", features = ["stream"] }
lyon_algorithms = "1.0"
tokio = { version = "1", features = ["fs", "io-util"] }